1.0.5 fix submenu spacing

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,7 +4,7 @@ Theme URI: https://rescuethemes.com/wordpress-themes/politics
 Author: rescuethemes
 Author URI: https://rescuethemes.com
 Description: Politics is a free WordPress theme optimized for politicians, political causes, campaigns, and government agencies.
-Version: 1.0.4
+Version: 1.0.5
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: politics
@@ -549,7 +549,7 @@ header#masthead{
 			}
 			/* 2nd level dropdown */
 			ul.sub-menu {
-				left: 101%;
+				left: 100%;
 		    top: 0;
 				padding: 0;
 				li {
